--- a/mystyle.css
+++ b/mystyle.css
@@ -1,14 +1,23 @@
-#nav{
+/*#nav{
 	float:left;
 	margin-left:10px;
 	width:300px;
 	font-family: 'Slabo 27px', serif;
-}
+}*/
 
 #header{
 	font-family: 'Slabo 27px', serif;
 	font-size:10px;
 	text-align:center;
+}
+
+#player{
+}
+
+#player .playerBox{
+	width:300px;
+	height:300px;
+	margin:0 auto;
 }
 
 #content{
@@ -18,7 +27,7 @@
 	top:20px;
 }
 
-.picture{
+/*.picture{
 	max-width:75%;
 	height:auto;
 }
@@ -29,4 +38,4 @@ b{
 
 i{
 	font-style:italic;
-}
+}*/
