--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -4,14 +4,20 @@
 	width:300px;
 	font-family: 'Slabo 27px', serif;
 }*/
+img{
+	display: block;
+	margin: 0px auto;
+	margin-bottom: 60px;
+}
 
-#header{
+#text{
 	font-family: 'Slabo 27px', serif;
 	font-size:10px;
 	text-align:center;
 }
 
 #player{
+	height:80px;
 }
 
 .button{
